compiler/testData/diagnostics/tests/enum/interfaceWithEnumKeyword.fir.kt
// RUN_PIPELINE_TILL: SOURCE
<!WRONG_MODIFIER_TARGET!>enum<!> interface Some {
    // Enum part
    D;

    // Interface like part
    fun test()
    val foo: Int
}
